Mon Nov 23 11:26:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): removed duplication.

	* dln.c (dln_find_1): not use prototype definition.

Thu Nov 19 23:22:40 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (putbinaryfile): use APPE for resume.
	  Thanks, Tomoyuki Chikanaga.

Thu Nov 19 22:34:49 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (flag_list): untaint strings to intern in the safe
	  level 1.

	* lib/net/imap.rb (max_flag_count=): new methods to set the max
	  number of flags interned to symbols.

Thu Nov 19 17:14:04 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub: nmake executes the file named echo if it exists
	  in the PATH.  reported by Kenta Murata <mrkn AT mrkn.jp> via IRC.

Sat Nov 14 17:09:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-opt-dir): ignore and suppress a warning.
	  [ruby-dev:39684]

Sat Nov 14 16:43:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): get rid of crash in Solaris 8 and 10.
	  [ruby-core:26668]

Sat Nov 14 04:07:06 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb (TkVariable::coerce): fix bug on a
	  numeric value.

Sat Nov 14 03:35:29 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: TkVariable#*(other) and /(other) have a
	  bug on handling of the "other" value.

Thu Nov 12 23:38:47 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi.rb: fix command-line option of
	  non-interactive terminal. [ruby-core:23016]

Mon Nov  9 11:38:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (clean-ext): get rid of failure.

	* configure.in (warnflags): add -Wno-long-long.

Mon Nov  9 01:55:10 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* eval.c (method_inspect, method_name, mnew): Bug fix when
	  method created from an alias.
	  Based on a patch by Peter Vanbroekhoven [ruby-core:22040]
